--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@ img {
 
 /* For ipad: */
 @media only screen
-    and (min-width: 320px) 
-    and (max-width: 768px){
+    and (min-device-width: 320px) 
+    and (max-device-width: 768px){
     .searchControl {
-        font-size: 40px;
+        font-size: 50px;
         border-color: aliceblue;
     }
 
