--- a/style.css
+++ b/style.css
@@ -50,10 +50,21 @@ img {
 /* For ipad: */
 @media only screen
     and (min-device-width: 320px) 
-    and (max-device-width: 812px){
+    and (max-device-width: 1024px){
     .searchControl {
         font-size: 50px;
         border-color: aliceblue;
+    }
+
+    body{
+        font-family:'Open Sans';
+        background-color: lightsteelblue;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        color: whitesmoke;
+        text-align: center;
+        font-size: 50px;
     }
 
     img {
