--- a/style.css
+++ b/style.css
@@ -24,10 +24,14 @@ img {
    height: auto;
    margin: auto;
    width: 20%;
+   
 }
 
 .weatherLogo {
     width: 30%;
+    display: block;
+    text-align: center;
+
 }
 
 .weatherDescription {
@@ -37,6 +41,7 @@ img {
     margin: 0 auto;
     margin-top: 30px;
     background-position: center center
+    
 }
 
 #humidity {
@@ -66,16 +71,14 @@ img {
   }
 
 
-/* For iphone: */
-/* @media screen and (max-width : 320px){
-
-}  */
-
-
-/* For ipad: */
-@media only screen
-    and (min-device-width: 320px) 
-    and (max-device-width: 1024px){
+  @media only screen and (min-width: 640px) {
+    .col-12 {
+      width: 100%;
+    }
+  }
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px)  { 
     .searchControl {
         font-size: 50px;  
         border-color: aliceblue;
